# nba_sharp

./: .gitignore  API_AUTOMATION.md  SETUP_AUTOMATION.md  main.py  pyproject.toml  test_api.sh
analysis/: AGENTS.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  game_matchup.py  player_proj.md  player_proj.py  verify_setup.py
analysis/daily_player_intake/: daily_proj.csv  player_projections_2025-11-05.csv
analysis/utils/: __init__.py  data_utils.py  examples.py  name_matcher.py
db/: AGENTS.md  README.md  create_tables.py  database.py  models.py  run_daily_update.py
db/db_extract/: __init__.py  extractors.py
db/db_insert/: README_PLAYER_PROJECTIONS.md  __init__.py  ingest_player_projections_to_db.py  ingest_player_stats_to_db.py  ingest_team_stats_to_db.py  ingest_today_nba_events_to_db.py
odds_api_retrieval/: AGENTS.md  __init__.py  get_today_nba_events.py
stats_retrieval/: AGENTS.md  fetch_and_merge_player_stats.py  fetch_and_merge_team_stats.py
